--- a/Accueil.html
+++ b/Accueil.html
@@ -19,7 +19,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index2.html">Accueil</a></li>
+        <li class="nav-item"><a class="nav-link" href="Accueil.html">Accueil</a></li>
         <li class="nav-item"><a class="nav-link" href="nosvins.html">Nos Vins</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Offres</a></li>
         <li class="nav-item"><a class="nav-link" href="apropos.html">À propos</a></li>
