modification dans le html

--- a/Accueil.html
+++ b/Accueil.html
@@ -25,7 +25,7 @@
         <li class="nav-item"><a class="nav-link" href="apropos.html">À propos</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5500/">S'inscrire</a></li>
+        <li class="nav-item"><a class="nav-link" href="inscription.html">S'inscrire</a></li>
       </ul>
     </div>
   </nav>
