accueil premier html

--- a/collection.html
+++ b/collection.html
@@ -52,7 +52,7 @@
       <div class="text-center mt-4">
         <div class="text-center mt-4">
             <a href="offres.html" class="btn btn-custom me-3">Découvrir toutes les offres</a>
-            <a href="index2.html" class="btn btn-outline-dark">Retour à l'accueil</a>
+            <a href="Accueil.html" class="btn btn-outline-dark">Retour à l'accueil</a>
           </div>
           
       </div>
