--- a/Apropos.html
+++ b/Apropos.html
@@ -93,7 +93,7 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <h6 class="text-uppercase fw-bold">Navigation</h6>
           <hr class="mb-2 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #b8860b; height: 2px" />
-          <p><a href="index2.html" class="text-light text-decoration-none">Accueil</a></p>
+          <p><a href="Accueil.html" class="text-light text-decoration-none">Accueil</a></p>
           <p><a href="#" class="text-light text-decoration-none">Nos Vins</a></p>
           <p><a href="#" class="text-light text-decoration-none">Offres</a></p>
           <p><a href="apropos.html" class="text-light text-decoration-none">À propos</a></p>
