--- a/inscription.html
+++ b/inscription.html
@@ -32,7 +32,7 @@
       <button type="submit">Se connecter</button>
 
 
-      <button type="button" onclick="window.location.href='index2.html';" class="back-home-btn">Retour à
+      <button type="button" onclick="window.location.href='Accueil.html';" class="back-home-btn">Retour à
         l'accueil</button>
 
       <div class="register">
