--- a/Apropos.html
+++ b/Apropos.html
@@ -64,7 +64,7 @@
             Notre équipe d'experts vous accompagne avec des conseils personnalisés pour chaque occasion.
           </p>
 
-          <a href="index2.html" class="btn btn-outline-dark btn-return">← Retour à l'accueil</a>
+          <a href="Accueil.html" class="btn btn-outline-dark btn-return">← Retour à l'accueil</a>
         </div>
 
 
